<resources>
    <string name="app_name">TutoTec</string>
    <string name="texto01">¡Bienvenido!</string>
    <string name="texto02">¿Qué tipo de Jaguar eres?</string>
    <string name="texto03">Registro de Jaguar</string>
    <string name="texto04">Imagen:</string>
    <string name="texto05">Nombre Completo</string>
    <string name="texto06">No. Control:</string>
    <string name="texto07">No. Control</string>
    <string name="texto08">Carrera:</string>
    <string name="texto09">Carrera</string>
    <string name="texto10">Grupo:</string>
    <string name="texto11">Grupo</string>
    <string name="texto12">Tutor:</string>
    <string name="texto13">Tutor</string>
    <string name="texto14">Correo</string>
    <string name="texto15">Correo:</string>
    <string name="texto16">Academia:</string>
    <string name="texto17">Academia</string>
    <string name="texto18">Actividad</string>
    <string name="texto19">Detalles de la actividad</string>
    <string name="texto20">¿En qué te puede ayudar tu tutor?</string>
    <string name="texto21">Canalización</string>
    <string name="texto22">Asesoría</string>
    <string name="texto23">Plática</string>
    <string name="texto24">Subir Evidencia</string>
    <string name="texto25">Control de las actividades</string>
    <string name="texto26">Actividad y Fecha</string>
    <string name="texto27">Confirmar asistencia</string>
    <string name="texto28">Actividades</string>
    <string name="texto29">Actividad</string>
    <string name="texto30">Fecha</string>
    <string name="texto31">Alumnos que asistieron</string>
    <string name="texto32">Alumnos que no asistieron</string>
    <string name="texto33">Eliminar Actividad</string>
    <string name="texto34">Agregar Actividad</string>
    <string name="texto35">Elegir Actividad</string>
    <string name="texto36">Agregar Solicitud</string>
    <string name="texto37">Solicitudes</string>
    <string name="texto38">Estatus</string>
    <string name="texto39">Rechazar asistencia</string>
    <string name="texto40">Asistencias</string>
    <string name="texto41">Asistio</string>
    <string name="texto42">Descripcion</string>
    <string name="texto43">Lugar</string>
    <string name="texto44">Fecha y hora</string>
    <string name="texto45">Editar Usuario</string>
    <string name="texto46">Dar de baja</string>
    <string name="boton01">Alumno</string>
    <string name="boton02">Tutor</string>
    <string name="boton03">Olvide mi contraseña</string>
    <string name="boton04">Ingresar</string>
    <string name="boton05">Registrarme</string>
    <string name="boton06">Elegir Archivo</string>
    <string name="boton07">Agregar Actividad</string>
    <string name="boton08">Agregar Solicitud</string>
    <string name="boton09">Confirmar</string>
    <string name="boton10">Rechazar</string>
    <string name="boton11">Eliminar Usuario</string>
    <string name="hint01">Número de Control</string>
    <string name="hint02">Contraseña</string>
    <string name="hint03">Correo Electronico</string>
    <string name="hint04">Nombre(s)</string>
    <string name="hint05">Apellido Paterno</string>
    <string name="hint06">Apellido Materno</string>
    <string name="hint07">Carrera</string>
    <string name="hint08">Grupo</string>
    <string name="hint09">Academia</string>
    <string name="hint10">Titulo</string>
    <string name="hint11">Descripción</string>
    <string name="hint12">Fecha</string>
    <string name="hint13">Hora</string>
    <string name="hint14">Ubicación</string>
    <string name="hint15">Tipo de solicitud</string>
    <string name="hint16">Tema</string>
    <string name="hint17">Área</string>
    <string-array name="carreras">
        <item>Carrera</item>
        <item>Ingeniería en Sistemas Computacionales</item>
        <item>Ingeniería en Tecnologías de la Información y Comunicaciones</item>
        <item>Ingeniería en Gestión Empresarial</item>
        <item>Ingeniería en Biotecnología</item>
        <item>Ingeniería en Mecatronica</item>
        <item>Ingeniería Industrial</item>
        <item>Ingeniería en Nanotecnología</item>
    </string-array>
    <string-array name="areas">
        <item>Área</item>
        <item>Psicología</item>
        <item>Salud</item>
        <item>Adicciones</item>
        <item>Beca Alimenticia</item>
        <item>Beca Manutención</item>
        <item>Beca Transporte</item>
        <item>Aptitudes Sobresalientes</item>
        <item>Procesos Administrativos</item>
        <item>Ciencias Básicas</item>
        <item>Tutorias</item>
    </string-array>
    <string name="menu_button_description">Abrir menú</string>
</resources>