<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="40dp"
    android:background="@color/white"
    tools:context=".InicioAlumno">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </TableRow>
        </TableLayout>


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/foto_alumno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/foto"
            android:scaleX=".5"
            android:scaleY=".5"
            android:layout_marginTop="-330dp"
            android:layout_marginBottom="-330dp"/>

        <TextView
            android:id="@+id/nombreCompleto_Alumno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto05"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:textSize="38sp"
            android:textColor="@color/color7"
            android:layout_marginBottom="20dp"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/texto06"
                    android:textStyle="bold"
                    android:textColor="@color/color5"
                    android:textSize="24sp"/>
                <TextView
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:text=""/>
                <TextView
                    android:id="@+id/noControl_carnet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/texto07"
                    android:textAlignment="textEnd"
                    android:textColor="@color/color7"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/texto08"
                    android:textStyle="bold"
                    android:textColor="@color/color5"
                    android:textSize="24sp"/>
                <TextView
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:text=""/>
                <TextView
                    android:id="@+id/carrera_carnet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/texto09"
                    android:textColor="@color/color7"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/texto10"
                    android:textStyle="bold"
                    android:textColor="@color/color5"
                    android:textSize="24sp"/>
                <TextView
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:text=""/>
                <TextView
                    android:id="@+id/grupo_carnet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/texto11"
                    android:textColor="@color/color7"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/texto12"
                    android:textStyle="bold"
                    android:textColor="@color/color5"
                    android:textSize="24sp"/>
                <TextView
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:text=""/>
                <TextView
                    android:id="@+id/tutor_carnet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/texto13"
                    android:textColor="@color/color7"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </TableRow>
        </TableLayout>



    </LinearLayout>

</RelativeLayout>