<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="40dp"
    android:background="@color/white"
    tools:context=".RegistroTutor">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageButton
                    android:id="@+id/btnRegresar_registro_tutor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/img_regresar"
                    android:background="@color/white"/>
            </TableRow>
        </TableLayout>

        <ImageView
            android:id="@+id/logo_inicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/TutoLogo"
            android:scaleX=".6"
            android:scaleY=".6"
            android:layout_marginTop="-290dp"
            android:layout_marginBottom="-270dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto03"
            android:textAlignment="center"
            android:textSize="38sp"
            android:textStyle="bold"
            android:textColor="@color/color4"
            android:layout_marginBottom="30dp" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nombre_tutor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/hint04"
            app:hintTextColor="@color/color3"
            android:layout_marginBottom="15dp"
            app:boxStrokeColor="@color/color1">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ape_paterno_tutor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/hint05"
            app:hintTextColor="@color/color3"
            android:layout_marginBottom="15dp"
            app:boxStrokeColor="@color/color1">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ape_materno_tutor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/hint06"
            app:hintTextColor="@color/color3"
            android:layout_marginBottom="15dp"
            app:boxStrokeColor="@color/color1">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/academia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/hint09"
            app:hintTextColor="@color/color3"
            android:layout_marginBottom="15dp"
            app:boxStrokeColor="@color/color1">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/grupo_tutor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/hint08"
            app:hintTextColor="@color/color3"
            android:layout_marginBottom="15dp"
            app:boxStrokeColor="@color/color1">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_registro_tutor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/hint03"
            app:hintTextColor="@color/color3"
            android:layout_marginBottom="15dp"
            app:boxStrokeColor="@color/color1">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_registro_tutor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/hint02"
            app:hintTextColor="@color/color3"
            app:boxStrokeColor="@color/color1"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txtImagen_tutor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/texto04"
            android:textSize="14sp"
            android:textColor="@color/color4"/>

        <Button
            android:id="@+id/btnElegirImagen_tutor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/boton06"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="@color/color4"
            android:drawableLeft="@drawable/img_agregar_imagen"
            android:backgroundTint="@color/color3"/>

        <Button
            android:id="@+id/btnRegistrarme_Tutor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/boton05"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="@color/color4"
            android:backgroundTint="@color/color3"/>

    </LinearLayout>
</ScrollView>